better math & p overflow fix in message

--- a/src/styles/imessage.css
+++ b/src/styles/imessage.css
@@ -16,6 +16,7 @@
   padding: 0.5rem 0.875rem;
   position: relative;
   word-wrap: break-word;
+  overflow: auto;
 }
 
 @media (min-width: 500px) {
